# representational-regularization

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
cka_ens/: __init__.py
cka_ens/cifar/: __init__.py  data.py  evaluate.py  model.py  router.py  train.py
cka_ens/llm/: __init__.py  data.py  evaluate.py  hooks.py  model_loader.py  penalty.py  router_evaluate.py  router_train.py  train.py
cka_ens/similarity/: __init__.py  numpy_cka.py
cka_ens/tools/: __init__.py  extract_xlsx.py
data/: cka_matrix_cka.csv  cka_matrix_control.csv  cka_matrix_cos.csv  router_cka.csv  router_combined_cka.csv  router_combined_control.csv  router_combined_cos.csv  router_control.csv  router_cos.csv  scaling_arc_challenge_cka.csv  scaling_arc_challenge_cos.csv  scaling_arc_easy_cka.csv  scaling_arc_easy_control.csv  scaling_arc_easy_cos.csv  scaling_gpqa_cka.csv  scaling_gpqa_control.csv  scaling_gpqa_cos.csv  scaling_gsm8k_cka.csv  scaling_gsm8k_control.csv  scaling_gsm8k_cos.csv  scaling_humaneval_cka.csv  scaling_humaneval_control.csv  scaling_humaneval_cos.csv  scaling_mmlu_cka.csv  scaling_mmlu_control.csv  scaling_mmlu_cos.csv
notebooks/: README.md  Router.ipynb  llm_walkthrough.ipynb
scripts/: README.md  _plot_style.py  compress_docstrings.py  extract_xlsx.py  fig_cifar_validation.py  fig_cka_heatmaps.py  fig_cost_vs_acc.py  fig_loss_curves.py  fig_oracle_contributors.py  fig_oracle_scaling.py  fig_router_bars.py  strip_comments.py
tests/: test_data_extraction.py  test_linear_cka.py  test_router_features.py
